# social_trends_analyzer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example_docker.env  perfect.py  perfect_flow.py  pyproject.toml
app/: dashboard.py
app/pages/: 2_selector.py
notebooks/: db_tester.ipynb  model_tester.ipynb  pipeline_sentiment_loading.ipynb  praw_api_exploration.ipynb  processing_test.ipynb  reddit_ingestor_test.ipynb  streamlit_plot_tester.ipynb  temp.ipynb
src/: app.py
src/pipelines/: fetch_data.py  load_posts_comments_db.py  process_raw_data.py  sentiment_loading.py
src/reddit_db/: db_manager.py  models.py
src/reddit_ingestion/: reddit_ingestion.py
src/reddit_ingestion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sentiment_model/: sentiment_model.py
src/spark_processing/: prova.py  spark_processing.py
src/src.egg-info/: PKG-INFO
src/tasks/: celery_app.py
web_app/pages/: 1_overview.py  2_selector.py  3_analysis.py  4_trends.py
